--- a/index.html
+++ b/index.html
@@ -1,347 +1,1 @@
-<!DOCTYPE html>
-<html lang="ru">
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title>N-code</title>
-	<link rel="icon" type="image/png" sizes="16x16" href="icons/favicon-16x16.png">
-	<!-- <link rel="stylesheet" href="https://kit.fontawesome.com/53722d01cf.css" crossorigin="anonymous"> -->
-	<link rel="stylesheet" href="/css/style.css">
-</head>
-<body>
-	<header id="up" class="promo header__promo">
-		<div class="container">
-				<div class="header__wrapper">
-					<div class="container">
-						<div class="header__wrapper__body">
-							<a href="" class="header__wrapper__logo"><img src="./icons/logo.png" alt=""></a>
-							<div class="header__wrapper__burger">
-								<span></span>
-							</div>
-							<nav class="header__wrapper__menu">
-								<div class="header__wrapper__contacts">
-									<a href="tel:+3806700000000" class="header__phone">+306700000000</a>
-									<a class="nav-link dropdown-toggle header__logo-flag" href="#">
-										<img class="header__logo-flag-icon" src="icons/Ukraine.png" alt="flag">
-									</a>
-								</div>
-								<ul class="header__wrapper__list">
-									<li><a href="#advantages" class="header__wrapper__link">ПРО&nbsp;НАС</a></li>
-									<li><a href="#mentors" class="header__wrapper__link">МЕНТОРИ</a></li>
-									<li><a href="#review" class="header__wrapper__link">ВIДГУКИ</a></li>
-									<li><a href="#certificates" class="header__wrapper__link">ПОДАРУВАТИ&nbsp;СЕРТИФIКАТ</a></li>
-									<li><a href="#contacts" class="header__wrapper__link">КОНТАКТИ</a></li>
-									<li><a href="#cabinet" class="header__wrapper__link">КАБIНЕТ</a></li>
-								</ul>
-							</nav>
-						</div>
-					</div>
-				</div>
-
-				<div class="promo__wrapper">
-					<div class="promo__wrapper-bg">
-						<img class="promo__wrapper-img" src="img/bg.jpg" alt="N-Code">
-					</div>
-					<div class="promo__wrapper-btn button_main button-mobile">
-						<button data-ripple data-modal="consultation" class="button">
-							Отримати консультацію менеджера
-							<span class="ripple"></span>
-						</button>
-					</div>
-				</div>
-		</div>
-	</header>
-
-	
-	<section id="advanteges" class="advantages">
-		<div class="container">
-				<h2 class="advantages__title title">НАШI ПЕРЕВАГИ</h2>
-				<div class="advantages__wrapper">
-					<div class="advantages__item">
-						<div class="advantages__descr">
-							Наші викладачі мають<br>досвід в IT від 5 років
-						</div>
-						<span>01</span>
-					</div>
-					<div class="advantages__item">
-						<div class="advantages__descr">
-							Гнучкий графік занять
-						</div>
-						<span>05</span> 
-					</div>
-					<div class="advantages__item">
-						<div class="advantages__descr">
-							Кожен студент <br>має персонального менеджера 
-						</div>
-						<span>02</span>         
-					</div>
-					<div class="advantages__item">
-						<div class="advantages__descr">
-							Допомагаємо підготувати резюме
-							та підготуватись до співбесіди
-						</div>
-						<span>06</span>        
-					</div>
-					<div class="advantages__item">
-						<div class="advantages__descr">
-							Зручна форма оплати
-						</div>
-								<span>03</span> 
-					</div>
-					<div class="advantages__item">
-						<div class="advantages__descr">
-							Найкращих студентів
-							працевлаштовуємо
-						</div>
-						<span>07</span> 
-					</div>
-					<div class="advantages__item">
-						<div class="advantages__descr">
-							Підключення до чат-боту
-							з англійської для розробників
-						</div>
-						<span>04</span> 
-					</div>
-					<div class="advantages__item">
-						<div class="advantages__descr">
-							Сертифікат\рекомендації в залежності
-							від отриманих компетенцій
-						</div>
-						<span>08</span> 
-					</div>
-				</div>
-		</div>
-	</section>
-
-	<section id="mentots" class="mentors">
-		<div class="container">
-			<div class="mentors__header">
-				<h2 class="mentors__title title">ТОП МЕНТОРIВ / РЕПЕТИТОРIВ</h2>
-				<a href="#" class="title__more">Всі ментори<span><i class="fa-solid fa-arrow-right-long"></i></span></a>
-			</div>
-			<div class="mentors__wrapper">
-				<div class="mentors__card-desktop">
-					
-					<div class="mentors__card mentors__card-active">
-						<div class="card__box-top">
-							<div class="card__box-top-left">
-								<img  src="icons/mentor.png" alt="Mentor">
-							</div>
-							<div class="card__box-top-rigth">
-								<div class="mentors__blockstars">
-									<i class="mentors__star fa-solid fa-star"></i>
-									<i class="mentors__star fa-regular fa-star"></i>
-									<i class="mentors__star fa-regular fa-star"></i>
-									<i class="mentors__star fa-regular fa-star"></i>
-									<i class="mentors__star fa-regular fa-star"></i>
-								</div>
-								<h3 class="mentors__card-title">Им’я Прізвище</h3>	
-							</div>
-						</div>
-						<div class="card__box-midd">
-							<p class="mentors__card-text">Детальна інформація про викладача та про досвід роботи в ІТ. Детальна інформація про викладача та про досвід роботи в ІТ</p>
-						</div>
-						<div class="card__box-bottom">
-							<div class="mentors__card-course">
-								Курс:
-								<span>Назва курсу</span>
-							</div>
-							<a href="#">Опис повністю <span><i class="fa-solid fa-arrow-right-long"></i></span></a>
-						</div>
-					</div>
-	
-					<div class="mentors__card mentors__card-active">
-						<div class="card__box-top">
-							<div class="card__box-top-left">
-								<img  src="icons/mentor.png" alt="Mentor">
-							</div>
-							<div class="card__box-top-rigth">
-								<div class="mentors__blockstars">
-									<i class="mentors__star fa-solid fa-star"></i>
-									<i class="mentors__star fa-regular fa-star"></i>
-									<i class="mentors__star fa-regular fa-star"></i>
-									<i class="mentors__star fa-regular fa-star"></i>
-									<i class="mentors__star fa-regular fa-star"></i>
-								</div>
-								<h3 class="mentors__card-title">Им’я Прізвище</h3>	
-							</div>
-						</div>
-						<div class="card__box-midd">
-							<p class="mentors__card-text">Детальна інформація про викладача та про досвід роботи в ІТ. Детальна інформація про викладача та про досвід роботи в ІТ</p>
-						</div>
-						<div class="card__box-bottom">
-							<div class="mentors__card-course">
-								Курс:
-								<span>Назва курсу</span>
-							</div>
-							<a href="#">Опис повністю<span><i class="fa-solid fa-arrow-right-long"></i></span></a>
-						</div>
-					</div>
-	
-					<div class="mentors__card mentors__card-active">
-						<div class="card__box-top">
-							<div class="card__box-top-left">
-								<img  src="icons/mentor.png" alt="Mentor">
-							</div>
-							<div class="card__box-top-rigth">
-								<div class="mentors__blockstars">
-									<i class="mentors__star fa-solid fa-star"></i>
-									<i class="mentors__star fa-regular fa-star"></i>
-									<i class="mentors__star fa-regular fa-star"></i>
-									<i class="mentors__star fa-regular fa-star"></i>
-									<i class="mentors__star fa-regular fa-star"></i>
-								</div>
-								<h3 class="mentors__card-title">Им’я Прізвище</h3>	
-							</div>
-						</div>
-						<div class="card__box-midd">
-							<p class="mentors__card-text">Детальна інформація про викладача та про досвід роботи в ІТ. Детальна інформація про викладача та про досвід роботи в ІТ</p>
-						</div>
-						<div class="card__box-bottom">
-							<div class="mentors__card-course">
-								Курс:
-								<span>Назва курсу</span>
-							</div>
-							<a href="#">Опис повністю<span><i class="fa-solid fa-arrow-right-long"></i></span></a>
-						</div>
-					</div>
-	
-					<div class="mentors__card">
-						<div class="card__box-top">
-							<div class="card__box-top-left">
-								<img  src="icons/mentor.png" alt="Mentor">
-							</div>
-							<div class="card__box-top-rigth">
-								<div class="mentors__blockstars">
-									<i class="mentors__star fa-solid fa-star"></i>
-									<i class="mentors__star fa-regular fa-star"></i>
-									<i class="mentors__star fa-regular fa-star"></i>
-									<i class="mentors__star fa-regular fa-star"></i>
-									<i class="mentors__star fa-regular fa-star"></i>
-								</div>
-								<h3 class="mentors__card-title">Им’я Прізвище</h3>	
-							</div>
-						</div>
-						<div class="card__box-midd">
-							<p class="mentors__card-text">Детальна інформація про викладача та про досвід роботи в ІТ. Детальна інформація про викладача та про досвід роботи в ІТ</p>
-						</div>
-						<div class="card__box-bottom">
-							<div class="mentors__card-course">
-								Курс:
-								<span>Назва курсу</span>
-							</div>
-							<a href="#">Опис повністю<span><i class="fa-solid fa-arrow-right-long"></i></span></a>
-						</div>
-					</div>
-	
-					<div class="mentors__card">
-						<div class="card__box-top">
-							<div class="card__box-top-left">
-								<img  src="icons/mentor.png" alt="Mentor">
-							</div>
-							<div class="card__box-top-rigth">
-								<div class="mentors__blockstars">
-									<i class="mentors__star fa-solid fa-star"></i>
-									<i class="mentors__star fa-regular fa-star"></i>
-									<i class="mentors__star fa-regular fa-star"></i>
-									<i class="mentors__star fa-regular fa-star"></i>
-									<i class="mentors__star fa-regular fa-star"></i>
-								</div>
-								<h3 class="mentors__card-title">Им’я Прізвище</h3>	
-							</div>
-						</div>
-						<div class="card__box-midd">
-							<p class="mentors__card-text">Детальна інформація про викладача та про досвід роботи в ІТ. Детальна інформація про викладача та про досвід роботи в ІТ</p>
-						</div>
-						<div class="card__box-bottom">
-							<div class="mentors__card-course">
-								Курс:
-								<span>Назва курсу</span>
-							</div>
-							<a href="#">Опис повністю<span><i class="fa-solid fa-arrow-right-long"></i></span></a>
-						</div>
-					</div>
-	
-					<div class="mentors__card">
-						<div class="card__box-top">
-							<div class="card__box-top-left">
-								<img  src="icons/mentor.png" alt="Mentor">
-							</div>
-							<div class="card__box-top-rigth">
-								<div class="mentors__blockstars">
-									<i class="mentors__star fa-solid fa-star"></i>
-									<i class="mentors__star fa-regular fa-star"></i>
-									<i class="mentors__star fa-regular fa-star"></i>
-									<i class="mentors__star fa-regular fa-star"></i>
-									<i class="mentors__star fa-regular fa-star"></i>
-								</div>
-								<h3 class="mentors__card-title">Им’я Прізвище</h3>	
-							</div>
-						</div>
-						<div class="card__box-midd">
-							<p class="mentors__card-text">Детальна інформація про викладача та про досвід роботи в ІТ. Детальна інформація про викладача та про досвід роботи в ІТ</p>
-						</div>
-						<div class="card__box-bottom">
-							<div class="mentors__card-course">
-								Курс:
-								<span>Назва курсу</span>
-							</div>
-							<a href="#">Опис повністю<span><i class="fa-solid fa-arrow-right-long"></i></span></a>
-						</div>
-					</div>
-	
-					<div class="mentors__card">
-						<div class="card__box-top">
-							<div class="card__box-top-left">
-								<img  src="icons/mentor.png" alt="Mentor">
-							</div>
-							<div class="card__box-top-rigth">
-								<div class="mentors__blockstars">
-									<i class="mentors__star fa-solid fa-star"></i>
-									<i class="mentors__star fa-regular fa-star"></i>
-									<i class="mentors__star fa-regular fa-star"></i>
-									<i class="mentors__star fa-regular fa-star"></i>
-									<i class="mentors__star fa-regular fa-star"></i>
-								</div>
-								<h3 class="mentors__card-title">Им’я Прізвище</h3>	
-							</div>
-						</div>
-						<div class="card__box-midd">
-							<p class="mentors__card-text">Детальна інформація про викладача та про досвід роботи в ІТ. Детальна інформація про викладача та про досвід роботи в ІТ</p>
-						</div>
-						<div class="card__box-bottom">
-							<div class="mentors__card-course">
-								Курс:
-								<span>Назва курсу</span>
-							</div>
-							<a href="#">Опис повністю<span><i class="fa-solid fa-arrow-right-long"></i></span></a>
-						</div>
-					</div>
-	
-					<div class="mentors__card mentors__invite-card mentors__card-active">
-						<img src="icons/plus.png" alt="">
-						<div class="mentors__invite-text">
-							Стати ментором
-						</div>
-					</div>
-				</div>
-				<div class="mentors__card-mobile">
-				</div>
-			</div>
-			<div class="mentors__wrapper-btn button_main">
-				<button data-ripple data-modal="consultation" class="button">
-					Записатись на пробне заняття
-				</button>
-				<button data-ripple data-modal="consultation" class="button button-mobile">
-					Всі ментори
-				</button>
-			</div>
-		</div>
-	</section>
-	
-	
-	<script src="https://kit.fontawesome.com/53722d01cf.js" crossorigin="anonymous"></script>
-	<script src="js/burger.js"></script>
-</body>
-</html>
+<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width, initial-scale=1.0"><link rel="stylesheet" href="css/main.css"><title>Document</title></head><body><div class="content-container"> <header class="header"><div class="container"><div class="logo"> <img src="img/logo.svg" alt="logo"></div><menu class="menu"> <div class="hamburger-menu"><div class="hamburger"><span></span></div></div><div class="header__items">               <a class="phone" href="tel:+380670000000">+380670000000</a><div class="language"> <div class="language__ico"> <img src="img/ukraine.svg" alt="ukraine"></div></div></div><ul class="menu__nav"><li class="menu__item"><a href="#">Про нас</a></li><li class="menu__item"><a href="#">Ментори</a></li><li class="menu__item"><a href="#">Відгуки</a></li><li class="menu__item"><a href="#">Подарувати сертифікат</a></li><li class="menu__item"><a href="#">Контакти</a></li><li class="menu__item"><a href="#">Кабінет</a></li></ul></menu></div></header><div class="slider">      <div class="slide"><h1 class="title">N-CODE <span class="title_small">Місце зустрічі з твоїм ментором</span></h1><img src="./img/main-slide.png" alt=""></div><a class="btn" href="#">Отримати консультацію менеджера</a></div><section class="advantages"><h2 class="section-title">НАШІ ПЕРЕВАГИ</h2><div class="container"><div class="advantages__item"><span class="item__num">01</span><p>Наші викладачі мають досвід в IT від 5 років</p></div><div class="advantages__item"><span class="item__num">02</span><p>Кожен студент має персонального менеджера</p></div><div class="advantages__item"><span class="item__num">03</span><p>Зручна форма оплати</p></div><div class="advantages__item"><span class="item__num">04</span><p>Підключення до чат-боту з англійської для розробників</p></div><div class="advantages__item"><span class="item__num">05</span><p>Гнучкий графік занять</p></div><div class="advantages__item"><span class="item__num">06</span><p>Допомагаємо скласти резюме та підготуватись до співбесіди</p></div><div class="advantages__item"><span class="item__num">07</span><p>Найкращих студентів працевлаштовуємо</p></div><div class="advantages__item"><span class="item__num">08</span><p>Сертифікатрекомендації в залежності від отриманих компетенцій</p></div></div></section></div></body></html>
